# Note: Versions need to be manually updated, flexible requirements are not supported by Dependabot
# https://github.com/dependabot/dependabot-core/issues/9105

[build-system]
requires = [
    "setuptools>=80.8.0",
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "leekbot"
version = "0.0.1"
description = "Lemon's Discord Bot Framework"
authors = [
    { name = "Lemon", email = "justlemoncl@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Communications :: Chat"
]
requires-python = ">=3.12"
dynamic = [
    "readme",
    "dependencies",
    "optional-dependencies"
]

[project.urls]
Homepage = "https://github.com/justalemon/Leek"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = [ "requirements.txt" ] }
optional-dependencies = { dev = { file = [ "requirements-dev.txt" ] }, extras = { file = [ "requirements-extras.txt" ] } }

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"*" = [
    "*.json"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D401",
    "D205",
    "D212",
    "D200",
    "D204",
    "D203",
    "ANN002",
    "ANN003",
    "ANN204",
    "COM812",
    "PLR2004"
]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "C", # mccabe complexity
    "I", # isort
    "N", # naming
    "D", # pydocstyle
    "ANN", # annotations
    "ASYNC", # async
    "S", # bandit
    "BLE", # blind except
    "B", # bugbear
    "A", # builtins
    "COM", # commas
    "C4", # comprehensions
    "DTZ", # datetimez
    "T10", # debugger
    "G", # logging format
    "INP", # no pep420
    "PIE", # pie? misc checks
    "T20", # print
    "Q", # quotes
    "RSE", # raise's
    "RET", # return values
    "SLF", # private members
    "SIM", # simplify calls
    "TID", # tidy imports
    "TCH", # type checking
    "INT", # get text
    "ARG", # unused arguments
    "PTH", # use pathlib instead
    "TD", # to do's
    "FIX", # fix me style messages
    "ERA", # eradicate commented code
    "PGH", # pygrep hooks
    "PLC", # pylint: convention
    "PLE", # pylint: errors
    "PLR", # pylint: refactor
    "PLW", # pylint: warnings
    "TRY", # tryceratops, aka exceptions
    "RUF", # ruff specific
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
    "D104"
]
"setup.py" = [
    "D100"
]
